Complete Stage 3: Add biological rule extraction and interpretation

--- a/haggis_analysis.ipynb
+++ b/haggis_analysis.ipynb
@@ -22,6 +22,12 @@
     "\n",
     "The dataset represents a unique opportunity to understand the physical characteristics and distributions of these newly monitored species across different island ecosystems.\n",
     "\n",
+    "We will:\n",
+    "- Load and inspect the dataset  \n",
+    "- Clean missing values  \n",
+    "- Explore species distributions  \n",
+    "- Analyze numeric features  \n",
+    "- Visualize relationships between body size measurements \n",
     "---"
    ]
   },
@@ -418,13 +424,13 @@
     "2.  **Data Errors**: One record has 'green' listed as the sex, which is clearly a data entry error.\n",
     "\n",
     "**Justification**:\n",
-    "* We will drop the row with 'green' sex as it is invalid.\n",
-    "* We will drop rows with missing measurements and missing sex. Since these represent a very small percentage of the dataset (<5%), removing them is safer than imputing (guessing) values, which could introduce bias."
+    "* We will drop the row with 'green' sex as it is invalid. This is an impossible biological value and therefore a data entry error.\n",
+    "* We will drop rows with missing measurements and missing sex. These measurements are core biological traits and cannot be meaningfully imputed without introducing artificial structure into the data. Since the proportion of missing values is <5%, deletion is statistically safe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "80118904",
    "metadata": {},
    "outputs": [
@@ -445,7 +451,9 @@
       "body_mass_g       0\n",
       "sex               0\n",
       "year              0\n",
-      "dtype: int64\n"
+      "dtype: int64\n",
+      "\n",
+      "Rows removed: 11\n"
      ]
     }
    ],
@@ -459,15 +467,14 @@
     "# 3. Drop rows where sex is missing (NaN)\n",
     "df_clean = df_clean.dropna(subset=['sex'])\n",
     "\n",
-    "print(len(df))\n",
-    "print(len(df_clean))\n",
-    "print\n",
     "print(f\"Original dataset shape: {df.shape}\")\n",
     "print(f\"Cleaned dataset shape: {df_clean.shape}\")\n",
     "\n",
     "# Verify clean\n",
     "print(\"\\nRemaining missing values:\")\n",
-    "print(df_clean.isnull().sum())"
+    "print(df_clean.isnull().sum())\n",
+    "\n",
+    "print(\"\\nRows removed:\", len(df) - len(df_clean))\n"
    ]
   },
   {
@@ -1342,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "ba46d4d2",
    "metadata": {},
    "outputs": [
@@ -1368,8 +1375,8 @@
     "\n",
     "# Ensure we are using the encoded versions of island/sex if they exist, or encode them now if needed.\n",
     "# Since X_cluster_scaled was numpy array, let's rebuild X cleanly from df_clean\n",
-    "X_class = pd.get_dummies(df_clean[['nose_length_mm', 'eye_size_mm', 'tail_length_mm', 'body_mass_g', 'island', 'sex']], \n",
-    "                         columns=['island', 'sex'], drop_first=True)\n",
+    "X_cluster_encoded = pd.get_dummies(X_cluster_raw, columns=['island', 'sex'], drop_first=False)\n",
+    "\n",
     "\n",
     "y_class = df_clean['species']\n",
     "\n",
@@ -1768,20 +1775,27 @@
    "id": "44270c8a",
    "metadata": {},
    "source": [
-    "### **Summary of Stage 3 & Biological Conclusions**\n",
+    "### Biological Rule Extraction & Interpretation\n",
+    "Based on the text extraction of our pruned decision tree, we can derive the following biological rules for identifying the species in the field:\n",
     "\n",
-    "1.  **Dominant Features**: Across all models, **Tail Length** and **Nose Length** were the primary discriminators.\n",
-    "2.  **The \"Wild Rambler\" Rule**:\n",
-    "    * *If Tail Length > ~208mm -> Wild Rambler.*\n",
-    "    * This rule is extremely robust (high precision).\n",
-    "3.  **The \"Macduff\" vs \"Bog Sniffler\" Challenge**:\n",
-    "    * Smaller tails (<208mm) lead to a secondary check on **Nose Length**.\n",
-    "    * *If Nose Length > ~44mm -> Bog Sniffler.*\n",
-    "    * *If Nose Length < ~44mm -> Macduff.*\n",
-    "4.  **Model Comparison**:\n",
-    "    * **Decision Tree**: Highly interpretable, good accuracy (~88%).\n",
-    "    * **Random Forest**: Higher accuracy (~90%+), but a \"black box\" (harder to read the rules).\n",
-    "    * **Recommendation**: For field guides, we should use the **Decision Tree** rules. For automated monitoring systems, we should use the **Random Forest**."
+    "**1. The \"Short Nose\" Rule (Macduff Identifier)**\n",
+    "* **Rule:** `IF nose_length_mm <= 42.23 mm THEN Species = Macduff`\n",
+    "* **Biological Insight:** This is the primary split. Any haggis with a short nose is almost certainly a Macduff. This trait is consistent across all islands.\n",
+    "\n",
+    "**2. The \"Shetland\" Rule (Bog Sniffler Identifier)**\n",
+    "* **Rule:** `IF nose_length > 42.23 mm AND Location = Shetland THEN Species = Bog Sniffler`\n",
+    "* **Biological Insight:** Long-nosed animals on Shetland are distinctively Bog Snifflers. This suggests the Bog Sniffler might be endemic to (or dominant in) the Shetland region.\n",
+    "\n",
+    "**3. The \"Iona\" Exception (Geographic Variation)**\n",
+    "* **Rule:** `IF nose_length > 42.23 mm AND Location = Iona THEN Species = Macduff`\n",
+    "* **Biological Insight:** Interestingly, if a long-nosed haggis is found on Iona, it is classified as a Macduff, not a Bog Sniffler. This suggests the Iona population of Macduffs may be morphologically larger/longer-nosed than their Skye counterparts.\n",
+    "\n",
+    "**4. The \"Skye Giant\" Rule (Wild Rambler Identifier)**\n",
+    "* **Rule:** `IF nose_length > 42.23 mm AND Location = Skye AND body_mass_g > 4149 g THEN Species = Wild Rambler`\n",
+    "* **Biological Insight:** On Skye, size matters. The Wild Rambler is the \"heavyweight\" (>4.15kg). Lighter long-nosed animals on Skye are classified as Macduffs.\n",
+    "\n",
+    "**Summary:**\n",
+    "The Decision Tree reveals that **Geography** plays a crucial role in distinguishing species that look morphologically similar (Macduff vs Bog Sniffler)."
    ]
   }
  ],
